welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:5: error: '<-' expected but ')' found.
for (nbTour != 10){
                 ^Runner:19: error: illegal start of simple expression
	}
        ^