welcome.lessons.welcome.loopfor.LoopCourse.scala.code
var nbPas = 0
var nbVir = 0 
var nbTour = 0 
for (nbTour != 10){
	for (nbVir != 4){
		for (nbPas != 8){
			avance()
			nbPas = nbPas + 1 
		}
		gauche()
		nbVir = nbVir + 1 
	}
	nbTour = nbTour + 1
}
	
